--- a/python_interview.ipynb
+++ b/python_interview.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORis1hPb+tFUWDAwIiLq1Z",
+      "authorship_tag": "ABX9TyM+SRczASWvz1xQiQksaNp9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1196,7 +1196,7 @@
         "id": "8zXsIvMQwG8G",
         "outputId": "4ffe4dc0-debe-41fb-daba-663891f6ba6f"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1216,6 +1216,84 @@
           "execution_count": 36
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Given an integer array nums and an integer val, remove all occurrences of val in nums in-place. The order of the elements may be changed. Then return the number of elements in nums which are not equal to val.\n",
+        "\n",
+        "Consider the number of elements in nums which are not equal to val be k, to get accepted, you need to do the following things:\n",
+        "\n",
+        "Change the array nums such that the first k elements of nums contain the elements which are not equal to val. The remaining elements of nums are not important as well as the size of nums.\n",
+        "Return k.\n",
+        "Custom Judge:\n",
+        "\n",
+        "The judge will test your solution with the following code:\n",
+        "\n",
+        "int[] nums = [...]; // Input array\n",
+        "int val = ...; // Value to remove\n",
+        "int[] expectedNums = [...]; // The expected answer with correct length.\n",
+        "                            // It is sorted with no values equaling val.\n",
+        "\n",
+        "int k = removeElement(nums, val); // Calls your implementation\n",
+        "\n",
+        "assert k == expectedNums.length;\n",
+        "sort(nums, 0, k); // Sort the first k elements of nums\n",
+        "for (int i = 0; i < actualLength; i++) {\n",
+        "    assert nums[i] == expectedNums[i];\n",
+        "}\n",
+        "If all assertions pass, then your solution will be accepted.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Example 1:\n",
+        "\n",
+        "Input: nums = [3,2,2,3], val = 3\n",
+        "Output: 2, nums = [2,2,_,_]\n",
+        "Explanation: Your function should return k = 2, with the first two elements of nums being 2.\n",
+        "It does not matter what you leave beyond the returned k (hence they are underscores).\n",
+        "Example 2:\n",
+        "\n",
+        "Input: nums = [0,1,2,2,3,0,4,2], val = 2\n",
+        "Output: 5, nums = [0,1,4,0,3,_,_,_]\n",
+        "Explanation: Your function should return k = 5, with the first five elements of nums containing 0, 0, 1, 3, and 4.\n",
+        "Note that the five elements can be returned in any order.\n",
+        "It does not matter what you leave beyond the returned k (hence they are underscores).\n",
+        "\n",
+        "\n",
+        "Constraints:\n",
+        "\n",
+        "0 <= nums.length <= 100\n",
+        "0 <= nums[i] <= 50\n",
+        "0 <= val <= 100"
+      ],
+      "metadata": {
+        "id": "MW99kOeO1ofs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Solution(object):\n",
+        "    def removeElement(self, nums, val):\n",
+        "        \"\"\"\n",
+        "        :type nums: List[int]\n",
+        "        :type val: int\n",
+        "        :rtype: int\n",
+        "        \"\"\"\n",
+        "    def removeElement(self, nums, val):\n",
+        "        index = 0\n",
+        "        for i in range(len(nums)):\n",
+        "            if nums[i] != val:\n",
+        "                nums[index] = nums[i]\n",
+        "                index += 1\n",
+        "        return index\n"
+      ],
+      "metadata": {
+        "id": "Oe5w5SnM1pE5"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
